@@ -375,6 +375,16 @@ class TestContacts(object):
         with pytest.warns(DeprecationWarning, match=wmsg):
             assert_equal(CA1.timeseries, CA1.results.timeseries)
 
+    @pytest.mark.parametrize("datafiles, expected", [((PSF, DCD), 0),
+                                                     ([TPR, XTC], 41814)])
+    def test_n_initial_contacts(self, datafiles, expected):
+        """Test for n_initial_contacts attribute"""
+        u = mda.Universe(*datafiles)
+        select = ('protein', 'not protein')
+        refgroup = (u.select_atoms('protein'), u.select_atoms('not protein'))
+
+        r = contacts.Contacts(u, select=select, refgroup=refgroup)
+        assert_equal(r.n_initial_contacts, expected)
 
 def test_q1q2():
     u = mda.Universe(PSF, DCD)
