@@ -27,6 +27,8 @@ Fixes
  * Fix deploy action to use the correct version of the pypi upload action.
 
 Enhancements
+ * Documented the r0 attribute in the `Contacts` class and added the 
+   `n_initial_contacts` attribute, with documentation. (Issue #2604, PR #4415)
 
 Changes
  * As per NEP29, the minimum version of numpy has been raised to 1.23.
